# orquesta

./: .dockerignore  .env.schema  .gitignore  AGENTS.md  BACKLOG.md  CONTEXT.md  Dockerfile  README.md  alembic.ini  bunfig.toml  docker-compose.yml  eslint.config.mjs  features.md  middleware.ts  next.config.mjs  opencode.jsonc  package.json  pnpm-lock.yaml  postcss.config.mjs  prek.toml  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/rules/: agents-conventional-commits.md  api-boundary-layout.md  api-schemas-extra-forbid.md  arch-database-package.md  arch-vocabulary.md  cli-typed-framework.md  core-logger.md  file-size-guard.md  general-respect-local-repo.md  import-linter.md  log-get-logger.md  log-no-print.md  no-dict.md  no-utils.md  py-legacy-lint-stack.md  repo-shape.md  settings-module.md  spaghetti-mixed-orchestration.md  test-coverage-gap.md  (+2 more)
.claude/: settings.json
.github/: dependabot.yml  zizmor.yml
alembic/: env.py
app/: globals.css  layout.tsx  page.tsx
app/login/: actions.ts  (+1 more)
components/: brand-mark.tsx  providers.tsx  status-badge.tsx
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf.example  opencode.json  orquesta-agent.md  orquesta-entrypoint.sh  smoke.sh  supervisord.conf
docs/: ARCHITECTURE.md  ARCHITECTURE.min.md  backend-api-features.md  deploy.md  orq-lite-query-api.md
lib/: add-feature.ts  chat-parts.ts  chat-scope.ts  error-message.ts  fetch-json.ts  flow-breadcrumb.ts  flow-graph.ts  flow-json.ts  flow-steps.ts  flow-validate.ts  format.ts  mock-data.ts  orq-lite.ts  paginate.ts  toast.tsx  types.ts  use-flow-catalog.ts  use-office-data.ts  use-system-status.ts  utils.ts
orquesta_api/: config.py  main.py
scripts/: build-skill-schema.ts  dev.sh  enqueue-next-round.sh  gen-ts-contract.ts  test-daemon-flow.sh
templates/: mcp.json.tmpl
test/: conftest.py  fake_docker_sdk.py  fake_orq_lite.py  queue_fakes.py  test_argv.py  test_artifacts.py  test_artifacts_endpoints.py  test_attention.py  test_auth.py  test_chat.py  test_config_roundtrip.py  test_containers_router.py  test_contract_types.py  test_correlation.py  test_docker_executor.py  test_event_bus.py  test_event_ingest.py  test_features.py  test_flow_schema.py  test_history_proxy.py  test_local_executor.py  test_mcp_auth.py  test_migrations.py  test_mirror_models.py  test_orqlite_smoke.py  test_overview_spend.py  test_project_service.py  test_projects_patch.py  test_repo_manager.py  test_reviews.py  test_run_lifecycle.py  test_run_queue.py  test_run_tasks.py  test_serve_manager.py  test_skills.py  test_webhooks.py
tui/: go.mod  go.sum  main.go
(+334 files in other folders)
