[project]
name = "orquesta-api"
version = "0.1.0"
description = "Orquesta backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "rich>=13",
    "uvicorn[standard]>=0.34",
    "alembic>=1.18.5",
    "anthropic>=0.115.1",
    "docker>=7.1.0",
    "fastmcp>=3.4.2",
]

# PEP 735 dependency group (not an extra): `uv sync` installs the dev group by
# default, which is what the tests.yml workflow's bare `uv sync --frozen`
# relies on — an [project.optional-dependencies] extra would NOT be installed
# there and pytest would be missing at CI time.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "pyrefly>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orquesta_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
# .agents/snippets/ are documentation examples, not production code.
# alembic/ is framework-generated scaffolding (env.py + versions/), not house-style code.
exclude = [".agents", "alembic"]

[tool.ruff.lint]
select = [
    "E", "F", "B", "I", "UP",
    "SIM", "RET", "C4", "DTZ", "PTH",
    "LOG", "G", "S", "C90", "RUF",
    "FAST", "ERA001", "D",
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "UP042"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"test/**" = ["S101"]
"orquesta_api/core/integrations/git.py" = ["S603", "S607"]
"test/conftest.py" = ["S603", "S607"]
"test/test_git.py" = ["S603", "S607"]
"test/test_repo_manager.py" = ["S603", "S607"]
"test/test_repos.py" = ["S603", "S607"]
"test/test_projects.py" = ["S603", "S607"]
"test/test_orqlite_smoke.py" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
markers = [
    "orqlite: requires the real orq-lite binary on PATH (skipped otherwise)",
]

[tool.pyrefly]
python-version = "3.12"
# test/: pytest fakes intentionally violate nominal types (in-memory stand-ins
# for asyncio.Process etc., CES-64), and the prek CI job runs pyrefly without
# the project's dev deps installed, so pytest itself is unresolvable there.
# alembic/: framework-generated scaffolding. .agents/: documentation snippets.
project-excludes = ["test/**", "alembic/**", ".agents/**"]
